--- a/templates/home.html
+++ b/templates/home.html
@@ -26,20 +26,20 @@
     <div class="row">
     <div class="col-md-6" style="width:40vw " >
       <h1 class="display-4" style="color:#fff">Welcome to SONIFY!</h1>
-      <h5 class="lead" style="color:#ddd">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-        featured content or information.</h5>
+      <h5 class="lead" style="color:#ddd">
+        Unlock the mysteries of the cosmos through sound with SONIFY's 3D Sonification Project, powered by cutting-edge AI technology. Immerse yourself in a symphony of the universe as AI transforms complex space videos into captivating auditory experiences.</h5>
       <hr class="my-4" style="color:#fff">
-      <p style="color:#fff">It uses utility classes for typography and spacing to space content out within the larger container.</p>
+      <p style="color:#fff">Exploring the Cosmos with Sound: 3D Sonifications - A New Sonic Universe to Discover!</p>
       <br>
       <a class="btn btn-lg"  style="color: #fff; background-color: #00008B; transition: background-color 0.3s;" onmouseover="this.style.backgroundColor='#591792'" onmouseout="this.style.backgroundColor='#00008B'"  href="https://hubblesite.org/videos?Type=Scientific%20Visualizations&keyword=flight" target="_blank" role="button">Check Out the Hubble site for Inspiration</a>
-      <br><br><br><br>  
+      <br><br>
 
       <p style="color:#aaa; ">scroll down and try it out yourself!</p>
       
     </div>
 
     <div class="col-md-6"  style="margin-left: 20px;">
-      <img src="media\milkywaygif.gif" alt="Description of the GIF" style="width: 100%; height: auto;">
+      <img src="media\giphy (1).gif" alt="Description of the GIF" style="width: 80%; height: auto;">
     </div>
 
     </div>
@@ -51,7 +51,7 @@
     </div>
 
     <div class="col-6 " style=" height: 100vh;" >
-      <p style="color:white">go wild</p>
+      <p style="color:white">Experiment with various videos here: </p>
       <div class="card w-80 mb-3" style="margin-top:25px ">
         <div class="card-body" style="background-color:#EDE2F0">
           <h5 class="card-title" style="text-align: center;">Upload a Video of Your Choice</h5>
