--- a/templates/home.html
+++ b/templates/home.html
@@ -39,19 +39,19 @@
     </div>
 
     <div class="col-md-6"  style="margin-left: 20px;">
-      <img src="media\giphy (1).gif" alt="Description of the GIF" style="width: 80%; height: auto;">
+      <img src="media\sphere_by_milkinside.gif" alt="Description of the GIF" style="width: 80%; height: auto;">
     </div>
 
     </div>
   </div>
   
-  <div  id="bottomDiv" class="row" style="background-image: url('{% static "images/soundwave1.jpeg"%}')"; >
+  <div  id="bottomDiv" class="row" style="background-image: url('{% static "images/bg1.png"%}') "; >
     {% comment %} <img src="static\images\soundwave1.jpeg" alt="Description of the GIF" style="width: 100%; height: auto;"> {% endcomment %}
     <div class="col-3"  >
     </div>
 
     <div class="col-6 " style=" height: 100vh;" >
-      <p style="color:white">Experiment with various videos here: </p>
+      <p style="color:white " style="margin-top:50px ">Experiment with various videos here: </p>
       <div class="card w-80 mb-3" style="margin-top:25px ">
         <div class="card-body" style="background-color:#EDE2F0">
           <h5 class="card-title" style="text-align: center;">Upload a Video of Your Choice</h5>
